--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mdi/react": "^1.6.1",
     "@prisma/client": "^5.13.0",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.1.9",
     "next": "^14.2.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "sharp": "^0.33.3",
     "zod": "^3.23.6"
