--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@prisma/client": "^5.13.0",
+    "@supabase/supabase-js": "^2.43.2",
     "firebase": "^10.11.1",
     "next": "^14.2.3",
     "react": "^18",
