--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.569.0",
@@ -15,6 +17,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@next/font": "^14.2.3",
     "@prisma/client": "^5.13.0",
     "@supabase/supabase-js": "^2.43.2",
     "firebase": "^10.11.1",
@@ -24,9 +27,16 @@
     "react-hook-form": "^7.51.4",
     "react-modal": "^3.16.1",
     "sharp": "^0.33.3",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@swc/core": "^1.5.7",
+    "@swc/jest": "^0.2.36",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -36,12 +46,17 @@
     "daisyui": "^4.10.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-jest-dom": "^5.4.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   },
   "lint-staged": {
