--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "chromedriver": "^125.0.0",
     "daisyui": "^4.10.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
@@ -57,6 +58,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
+    "selenium-webdriver": "^4.21.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5"
