--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
+    "@types/selenium-webdriver": "^4.1.22",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "chromedriver": "^125.0.0",
@@ -58,7 +59,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
-    "selenium-webdriver": "^4.21.0",
+    "selenium-webdriver": "^3.6.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5"
