--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devmatch-stable",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -60,6 +60,7 @@
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
     "selenium-webdriver": "^3.6.0",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5"
