--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.13.0",
     "@supabase/supabase-js": "^2.43.2",
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "framer-motion": "^11.1.9",
     "next": "^14.2.3",
     "react": "^18.3.1",
