--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/selenium-webdriver": "^4.1.22",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "chromedriver": "^125.0.0",
@@ -65,6 +66,7 @@
     "jest-fetch-mock": "^3.0.3",
     "jest-mock-extended": "^3.0.7",
     "lint-staged": "^15.2.2",
+    "next-test-api-route-handler": "^4.0.7",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
