--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
     "framer-motion": "^11.1.9",
+    "jest-fetch-mock": "^3.0.3",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18",
@@ -47,6 +48,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
@@ -63,6 +65,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "msw": "^2.3.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
