build(integration): add reset before starting tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:selenium": "npm run teardown:selenium && npm run setup:selenium && jest --forceExit --testPathPattern=__tests__/selenium/ && npm run teardown:selenium",
     "test:watch": "jest --watchAll",
     "test:unit": "jest --forceExit --testPathPattern=__tests__/unit/ --env=jsdom",
-    "test:integration": "jest --forceExit --testPathPattern=__tests__/integration/ --env=node"
+    "test:integration": "npm run teardown:selenium && jest --forceExit --testPathPattern=__tests__/integration/ --env=node && npm run teardown:selenium"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.569.0",
