--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/selenium-webdriver": "^4.1.22",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "chromedriver": "^125.0.0",
